clang/test/Preprocessor/embed_file_not_found.c
// RUN: %clang_cc1 %s -E -CC -verify

#embed <nfejfNejAKFe>
// expected-error@-1 {{'nfejfNejAKFe' file not found}}
